# cpp-game-editor

./: CMakeLists.txt
src/: main.cpp  pch.h
src/framework/: app.cpp  app.h
